--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Developer Prottofolio</title>
+    <title>Web Developer Protofolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styls/portfolio.css" class="css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3 class="nav-title">
+                Na<span class="text-primary">m</span>i
+            </h3>
+            <ul>
+                <li><a href="">Protofolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
