--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h3 class="sctn-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-coloumn">
+                    <h3 class="resume-coloumn-title">My Education</h3>
+                </div>
+                <div class="resume-coloumn">
+                    <h3 class="resume-coloumn-title">My Experience</h3>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
