--- a/index.html
+++ b/index.html
@@ -92,12 +92,52 @@
             <h3 class="sctn-title">A summary of My Resume</h3>
             <div class="resume-container">
                 <div class="resume-coloumn">
-                    <h3 class="resume-coloumn-title">My Education</h3>
+                    <h1 class="resume-coloumn-title">My Education</h1>
+                    <div class="resumi-item">
+                        <h2 class="resumi-item-tittle">Master in Computer Engineering</h2>
+                        <h3 class="resume-items-inistitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-items-info">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resumi-item">
+                        <h2 class="resumi-item-tittle">Master in Computer Engineering</h2>
+                        <h3 class="resume-items-inistitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-items-info">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resumi-item">
+                        <h2 class="resumi-item-tittle">Master in Computer Engineering</h2>
+                        <h3 class="resume-items-inistitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-items-info">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
                 </div>
                 <div class="resume-coloumn">
-                    <h3 class="resume-coloumn-title">My Experience</h3>
+                    <h1 class="resume-coloumn-title">My Experience</h1>
+                    <div class="resumi-item">
+                        <h2 class="resumi-item-tittle">Sr. Font End Developer</h2>
+                        <h3 class="resumi-item-institute">Apple Inc / 2020 - Current</h3>
+                        <p class="resumi-items-info">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resumi-item">
+                        <h2 class="resumi-item-tittle">Jr. Font End Developer</h2>
+                        <h3 class="resumi-item-institute">Dribbble Inc / 2018 - 2022</h3>
+                        <p class="resumi-items-info">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resumi-item">
+                        <h2 class="resumi-item-tittle">HTML Developer</h2>
+                        <h3 class="resumi-item-institute">Adobe Inc / 2017 - 2018</h3>
+                        <p class="resumi-items-info">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
                 </div>
-            </div>
+            </div> 
         </section>
     </main>
     <footer>
